add hero function and contact us page and products page and about page , update some style

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -1,8 +1,8 @@
 {
-	"cuda": "توكن",
+	"Souq": "سوق",
 	"welcome": "مرحبًا بك في ",
-	"Projects": "المشاريع",
+	"Products": "المنتجات",
 	"Home": "الرئيسيه",
 	"About": "عن الموقع",
-	"contact": "تواصل معنا"
+	"Contact": "تواصل معنا"
 }
