--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -1,8 +1,8 @@
 {
-	"cuda": "SOUQ",
-	"welcome": "BONJOUR to ",
-	"Projects": "Projects",
+	"Souq": "Souq`",
+	"welcome": "  welcome ",
+	"Products": "Products`",
 	"Home": "Home`",
-	"About": "AboutME ",
-	"contact": " ContactESION"
+	"About": " About`",
+	"Contact": "Contact Us`"
 }
