add french and english language content and make the website more responsive

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -1,8 +1,47 @@
 {
 	"Souq": "سوق",
 	"welcome": "مرحبًا بك في ",
-	"Products": "المنتجات",
+	"Productsspecial": "عروض خاصة",
 	"Home": "الرئيسيه",
 	"About": "عن الموقع",
-	"Contact": "تواصل معنا"
+	"Contact": "تواصل معنا",
+	"heroTitle": "تخفيضات نهاية الموسم",
+	"heroDesc": "خصومات تصل إلى 50% على جميع المنتجات",
+	"shopNow": "تسوق الآن",
+	"searchPlaceholder": "ابحث عن المنتجات...",
+	"buy": " اشتري الآن",
+	"productPage": "خصومات موسمية حتى 50٪",
+	"productDesc": "اكتشف أحدث صيحات الموضة والإلكترونيات",
+	"homeProductSection": "الأكثر مبيعاً",
+	"categoinproduct": "تسوق حسب الفئة",
+	"quickLinks": "روابط سريعة",
+	"copyright": "© 2025 Magdi جميع الحقوق محفوظة.",
+
+	"ourMessage": "رسالتنا",
+	"storeImage": "صورة المحل",
+	"ourMessageDesc": "في Magdi Fashion نؤمن أن الأناقة هي أسلوب حياة، لذلك نحرص على تقديم أفضل تشكيلات الملابس العصرية للرجال والنساء بجودة عالية وأسعار مناسبة. هدفنا هو أن يجد كل عميل إطلالة تعكس شخصيته وتزيد من ثقته بنفسه، مع التزامنا بتجربة تسوق ممتعة ومميزة.",
+	"ourVision": "رؤيتنا",
+	"ourVisionDesc": "أن نصبح الوجهة الأولى لعشاق الموضة في المنطقة من خلال توفير ملابس تناسب جميع الأذواق والفئات العمرية.",
+	"ourGoals": "أهدافنا",
+	"ourGoalsDesc": "تقديم تجربة تسوق متكاملة، تجمع بين الجودة العالية، التصميم العصري، والخدمة المتميزة.",
+	"sustainability": "الاستدامة",
+	"sustainabilityDesc": "نلتزم باستخدام خامات صديقة للبيئة والعمل مع موردين يهتمون بالمسؤولية الاجتماعية والبيئية.",
+	"clothingPiece": "قطعة ملابس متنوعة في مجموعتنا",
+	"employeeService": "موظف لخدمتك بأفضل صورة",
+	"experienceYears": "10 سنوات خبرة في مجال الأزياء والموضة",
+	"exyear": "10 سنوات",
+
+	"contactInfo": "معلومات الاتصال",
+	"phone": "الهاتف",
+	"email": "البريد الإلكتروني",
+	"address": "العنوان",
+	"addressDetails": "محل سوق - المحله، الغربيه ",
+	"location": "موقعنا",
+
+	"userName": "مجدي بربر",
+	"userLocation": "القاهرة - مصر",
+	"purchases": "المشتريات",
+	"settings": "الإعدادات",
+	"noPurchases": "لم تقم بشراء أي منتجات حتى الآن.",
+	"Purchases": "مشترياتي"
 }
