--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,8 +1,48 @@
 {
 	"Souq": "Souq",
-	"welcome": "  welcome ",
-	"Products": "Products",
+	"welcome": "Welcome to ",
+	"Productsspecial": "Special Offers",
 	"Home": "Home",
-	"About": " About",
-	"Contact": "Contact Us"
+	"About": "About Us",
+	"Contact": "Contact Us",
+	"heroTitle": "End of Season Sale",
+	"heroDesc": "Discounts up to 50% on all products",
+	"shopNow": "Shop Now",
+	"searchPlaceholder": "Search for products...",
+	"buy": "Buy Now",
+	"productPage": "Seasonal Discounts up to 50%",
+	"productDesc": "Discover the latest trends in fashion and electronics",
+	"homeProductSection": "Best Sellers",
+	"categoinproduct": "Shop by Category",
+	"quickLinks": "Quick Links",
+	"copyright": "© 2025 Magdi All rights reserved.",
+
+	"ourMessage": "Our Message",
+	"storeImage": "Store Image",
+	"ourMessageDesc": "At Magdi Fashion, we believe that elegance is a lifestyle. That’s why we are committed to offering the best collections of modern clothing for men and women with high quality and affordable prices. Our goal is to help every customer find a look that reflects their personality and boosts their confidence, while ensuring an enjoyable and unique shopping experience.",
+	"ourVision": "Our Vision",
+	"ourVisionDesc": "To become the number one destination for fashion lovers in the region by providing clothing that suits all tastes and age groups.",
+	"ourGoals": "Our Goals",
+	"ourGoalsDesc": "To provide a complete shopping experience that combines high quality, modern design, and excellent service.",
+	"sustainability": "Sustainability",
+	"sustainabilityDesc": "We are committed to using eco-friendly materials and working with suppliers who care about social and environmental responsibility.",
+	"clothingPiece": "A diverse clothing piece in our collection",
+	"employeeService": "An employee ready to serve you in the best way",
+	"experienceYears": "10 years of experience in fashion and style",
+	"exyear": "10 years",
+
+	"contactInfo": "Contact Information",
+	"phone": "Phone",
+	"email": "Email",
+	"address": "Address",
+	"addressDetails": "Souq - Almehala, Algharbia",
+	"location": "Our Location",
+
+	"userName": "Magdi Barber",
+	"userLocation": "Cairo - Egypt",
+	"purchases": "Purchases",
+	"favorites": "Favorites",
+	"settings": "Settings",
+	"noPurchases": "You haven’t purchased any products yet.",
+	"Purchases": "My Purchases"
 }
