--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -1,8 +1,48 @@
 {
 	"Souq": "Souq`",
-	"welcome": "  welcome ",
-	"Products": "Products`",
-	"Home": "Home`",
-	"About": " About`",
-	"Contact": "Contact Us`"
+	"welcome": "Bienvenue à ",
+	"Productsspecial": "Offres spéciales",
+	"Home": "Accueil",
+	"About": "À propos",
+	"Contact": "Contactez-nous",
+	"heroTitle": "Soldes de fin de saison",
+	"heroDesc": "Réductions jusqu'à 50% sur tous les produits",
+	"shopNow": "Acheter maintenant",
+	"searchPlaceholder": "Rechercher des produits...",
+	"buy": "Acheter",
+	"productPage": "Réductions saisonnières jusqu'à 50%",
+	"productDesc": "Découvrez les dernières tendances en mode et électronique",
+	"homeProductSection": "Meilleures ventes",
+	"categoinproduct": "Acheter par catégorie",
+	"quickLinks": "Liens rapides",
+	"copyright": "© 2025 Magdi Tous droits réservés.",
+
+	"ourMessage": "Notre Message",
+	"storeImage": "Image du magasin",
+	"ourMessageDesc": "Chez Magdi Fashion, nous croyons que l’élégance est un style de vie. C’est pourquoi nous nous engageons à offrir les meilleures collections de vêtements modernes pour hommes et femmes, avec une haute qualité et des prix abordables. Notre objectif est d’aider chaque client à trouver un look qui reflète sa personnalité et renforce sa confiance en lui, tout en garantissant une expérience d’achat agréable et unique.",
+	"ourVision": "Notre Vision",
+	"ourVisionDesc": "Devenir la destination numéro un pour les passionnés de mode dans la région en proposant des vêtements adaptés à tous les goûts et à toutes les tranches d’âge.",
+	"ourGoals": "Nos Objectifs",
+	"ourGoalsDesc": "Offrir une expérience d’achat complète alliant haute qualité, design moderne et service excellent.",
+	"sustainability": "Durabilité",
+	"sustainabilityDesc": "Nous nous engageons à utiliser des matières respectueuses de l’environnement et à travailler avec des fournisseurs soucieux de la responsabilité sociale et environnementale.",
+	"clothingPiece": "Un vêtement varié dans notre collection",
+	"employeeService": "Un employé à votre service de la meilleure façon",
+	"experienceYears": "10 ans d’expérience dans la mode et le style",
+	"exyear": "10 ans",
+
+	"contactInfo": "Informations de contact",
+	"phone": "Téléphone",
+	"email": "E-mail",
+	"address": "Adresse",
+	"addressDetails": "Souq - Le mehala, Égypte",
+	"location": "Notre emplacement",
+
+	"userName": "Magdi Barber",
+	"userLocation": "Le Caire - Égypte",
+	"purchases": "Achats",
+	"favorites": "Favoris",
+	"settings": "Paramètres",
+	"noPurchases": "Vous n’avez encore acheté aucun produit.",
+	"Purchases": "Mes Achats"
 }
