--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -19,7 +19,7 @@
 
 	"ourMessage": "رسالتنا",
 	"storeImage": "صورة المحل",
-	"ourMessageDesc": "في Magdi Fashion نؤمن أن الأناقة هي أسلوب حياة، لذلك نحرص على تقديم أفضل تشكيلات الملابس العصرية للرجال والنساء بجودة عالية وأسعار مناسبة. هدفنا هو أن يجد كل عميل إطلالة تعكس شخصيته وتزيد من ثقته بنفسه، مع التزامنا بتجربة تسوق ممتعة ومميزة.",
+	"ourMessageDesc": "في Souq نؤمن أن الأناقة هي أسلوب حياة، لذلك نحرص على تقديم أفضل تشكيلات الملابس العصرية للرجال والنساء بجودة عالية وأسعار مناسبة. هدفنا هو أن يجد كل عميل إطلالة تعكس شخصيته وتزيد من ثقته بنفسه، مع التزامنا بتجربة تسوق ممتعة ومميزة.",
 	"ourVision": "رؤيتنا",
 	"ourVisionDesc": "أن نصبح الوجهة الأولى لعشاق الموضة في المنطقة من خلال توفير ملابس تناسب جميع الأذواق والفئات العمرية.",
 	"ourGoals": "أهدافنا",
