--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -19,7 +19,7 @@
 
 	"ourMessage": "Our Message",
 	"storeImage": "Store Image",
-	"ourMessageDesc": "At Magdi Fashion, we believe that elegance is a lifestyle. That’s why we are committed to offering the best collections of modern clothing for men and women with high quality and affordable prices. Our goal is to help every customer find a look that reflects their personality and boosts their confidence, while ensuring an enjoyable and unique shopping experience.",
+	"ourMessageDesc": "At Souq, we believe that elegance is a lifestyle. That’s why we are committed to offering the best collections of modern clothing for men and women with high quality and affordable prices. Our goal is to help every customer find a look that reflects their personality and boosts their confidence, while ensuring an enjoyable and unique shopping experience.",
 	"ourVision": "Our Vision",
 	"ourVisionDesc": "To become the number one destination for fashion lovers in the region by providing clothing that suits all tastes and age groups.",
 	"ourGoals": "Our Goals",
