--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -19,7 +19,7 @@
 
 	"ourMessage": "Notre Message",
 	"storeImage": "Image du magasin",
-	"ourMessageDesc": "Chez Magdi Fashion, nous croyons que l’élégance est un style de vie. C’est pourquoi nous nous engageons à offrir les meilleures collections de vêtements modernes pour hommes et femmes, avec une haute qualité et des prix abordables. Notre objectif est d’aider chaque client à trouver un look qui reflète sa personnalité et renforce sa confiance en lui, tout en garantissant une expérience d’achat agréable et unique.",
+	"ourMessageDesc": "Chez Souq, nous croyons que l’élégance est un style de vie. C’est pourquoi nous nous engageons à offrir les meilleures collections de vêtements modernes pour hommes et femmes, avec une haute qualité et des prix abordables. Notre objectif est d’aider chaque client à trouver un look qui reflète sa personnalité et renforce sa confiance en lui, tout en garantissant une expérience d’achat agréable et unique.",
 	"ourVision": "Notre Vision",
 	"ourVisionDesc": "Devenir la destination numéro un pour les passionnés de mode dans la région en proposant des vêtements adaptés à tous les goûts et à toutes les tranches d’âge.",
 	"ourGoals": "Nos Objectifs",
