--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -10,6 +10,7 @@
 	"shopNow": "تسوق الآن",
 	"searchPlaceholder": "ابحث عن المنتجات...",
 	"buy": " اشتري الآن",
+	"ConfirmPurchase": "تأكيد الشراء",
 	"productPage": "خصومات موسمية حتى 50٪",
 	"productDesc": "اكتشف أحدث صيحات الموضة والإلكترونيات",
 	"homeProductSection": "الأكثر مبيعاً",
@@ -46,5 +47,28 @@
 	"Purchases": "مشترياتي",
 	"Rate": "تقييم",
 	"sortPricce": "فرز حسب السعر",
-	"cancelSort": "إلغاء الفرز"
+	"cancelSort": "إلغاء الفرز",
+	"TotalPrice": "السعر الإجمالي",
+	"Quantity": "الكمية",
+	"orderData": "بيانات الطلب",
+	"emailOrPhone": "البريد الإلكتروني أو رقم الهاتف",
+	"offersNew": "إرسالي بالعروض الجديدة",
+	"shippingAddress": "عنوان التوصيل",
+	"country": "الدولة",
+	"firstName": "الاسم الأول",
+	"lastName": "الاسم الأخير",
+	"postalCode": "الرمز البريدي",
+	"region": "المنطقة",
+	"city": "المدينة",
+	"phoneRequired": "رقم هاتف للتواصل (إجباري)",
+	"saveInfo": "احفظ البيانات للاستخدام القادم",
+	"shippingDetails": "تفاصيل الشحن",
+	"homeDelivery": "توصيل المنزل - 100 ج.م",
+	"paymentMethod": "وسيلة الدفع",
+	"cod": "الدفع عند الاستلام (COD)",
+	"cardPayment": "الدفع بالبطاقة",
+	"placeOrder": "تنفيذ الطلب",
+	"egy": "مصر",
+	"sa": "السعودية",
+	"usa": "الولايات المتحدة"
 }
