--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,6 +10,7 @@
 	"shopNow": "Shop Now",
 	"searchPlaceholder": "Search for products...",
 	"buy": "Buy Now",
+	"ConfirmPurchase": "Confirm Purchase",
 	"productPage": "Seasonal Discounts up to 50%",
 	"productDesc": "Discover the latest trends in fashion and electronics",
 	"homeProductSection": "Best Sellers",
@@ -47,5 +48,29 @@
 	"Purchases": "My Purchases",
 	"Rate": "Rate",
 	"sortPricce": "Sort by Price",
-	"cancelSort": "Cancel Sort"
+	"cancelSort": "Cancel Sort",
+	"TotalPrice": "Total Price",
+	"Quantity": "Quantity",
+
+	"orderData": "Order Details",
+	"emailOrPhone": "Email or Phone",
+	"offersNew": "Send me new offers",
+	"shippingAddress": "Shipping Address",
+	"country": "Country",
+	"firstName": "First Name",
+	"lastName": "Last Name",
+	"postalCode": "Postal Code",
+	"region": "Region",
+	"city": "City",
+	"phoneRequired": "Phone number (Required)",
+	"saveInfo": "Save information for next time",
+	"shippingDetails": "Shipping Details",
+	"homeDelivery": "Home Delivery - E£ 100",
+	"paymentMethod": "Payment Method",
+	"cod": "Cash on Delivery (COD)",
+	"cardPayment": "Pay with Card",
+	"placeOrder": "Place Order",
+	"egy": "Egypt",
+	"sa": "Saudi Arabia",
+	"usa": "United States"
 }
