--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -10,6 +10,7 @@
 	"shopNow": "Acheter maintenant",
 	"searchPlaceholder": "Rechercher des produits...",
 	"buy": "Acheter",
+	"ConfirmPurchase": "Confirmer l'achat",
 	"productPage": "Réductions saisonnières jusqu'à 50%",
 	"productDesc": "Découvrez les dernières tendances en mode et électronique",
 	"homeProductSection": "Meilleures ventes",
@@ -47,5 +48,29 @@
 	"Purchases": "Mes Achats",
 	"Rate": "Évaluer",
 	"sortPricce": "Trier par Prix",
-	"cancelSort": "Annuler le tri"
+	"cancelSort": "Annuler le tri",
+	"TotalPrice": "Prix Total",
+	"Quantity": "Quantité",
+
+	"orderData": "Détails de la commande",
+	"emailOrPhone": "E-mail ou téléphone",
+	"offersNew": "Envoyez-moi les nouvelles offres",
+	"shippingAddress": "Adresse de livraison",
+	"country": "Pays",
+	"firstName": "Prénom",
+	"lastName": "Nom de famille",
+	"postalCode": "Code postal",
+	"region": "Région",
+	"city": "Ville",
+	"phoneRequired": "Numéro de téléphone (Obligatoire)",
+	"saveInfo": "Enregistrer les informations pour la prochaine fois",
+	"shippingDetails": "Détails de livraison",
+	"homeDelivery": "Livraison à domicile - 100 E£",
+	"paymentMethod": "Méthode de paiement",
+	"cod": "Paiement à la livraison (COD)",
+	"cardPayment": "Payer par carte",
+	"placeOrder": "Passer la commande",
+	"egy": "Égypte",
+	"sa": "Arabie Saoudite",
+	"usa": "États-Unis"
 }
